# episodic

./: .gitignore  Cargo.toml  DECISIONS.md  README.md  RELEASE_REVIEW.md
benches/: hotpaths.rs
docs/: COMPATIBILITY.md  IMPLEMENTATION-PLAN.md  PROTOCOL.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TASKS.md
docs/analysis/: README.md  addon.md  axiomme-direct-fix-plan.md  axiomme-episodic-boundary-plan.md  config.md  context.md  cross-validation.md  doc-consistency-review.md  inference.md  lib.md  model.md  parse.md  pipeline.md  prompt.md  root.md  transform.md  xml.md
docs/analysis/src/: 00-index.md  README.md  config.md  core.md  cross-validation.md  next-step-validity-review.md  parse.md  prompt.md  tests-as-spec.md  transform.md
src/: README.md  addon.rs  context.rs  inference.rs  lib.rs  model.rs  pipeline.rs  xml.rs
src/addon/: tests.rs
src/config/: README.md  input.rs  mod.rs  resolve.rs  tests.rs  validate.rs
src/context/: tests.rs
src/inference/: tests.rs
src/model/: tests.rs
src/parse/: README.md  mod.rs  sections.rs  tests.rs  thread.rs  tokens.rs
src/pipeline/: tests.rs
src/prompt/: README.md  contract.rs  formatter.rs  mod.rs  parser.rs  system.rs  tests.rs  user.rs
src/transform/: README.md  activation.rs  helpers.rs  mod.rs  scope.rs  snapshot.rs  types.rs
src/transform/observer/: README.md  candidates.rs  context.rs  continuation.rs  decision.rs  mod.rs  synthesis.rs
src/transform/reflection/: mod.rs  (+6 more)
tests/: README.md  contract_fixtures.rs  parity_fixtures.rs  runtime_behavior_validation.rs
tests/fixtures/: parity_cases.json
(+12 files in other folders)
